--- a/releng/pom.xml
+++ b/releng/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.eclipse.lsp4j</groupId>
 	<artifactId>lsp4j.releng</artifactId>
-	<version>0.9.0-SNAPSHOT</version>
+	<version>0.9.0.M3</version>
 	<packaging>pom</packaging>
 
 	<properties>
@@ -36,67 +36,67 @@
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j</artifactId>
-			<version>0.9.0-SNAPSHOT</version>
+			<version>0.9.0.M3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j</artifactId>
-			<version>0.9.0-SNAPSHOT</version>
+			<version>0.9.0.M3</version>
 			<classifier>sources</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.debug</artifactId>
-			<version>0.9.0-SNAPSHOT</version>
+			<version>0.9.0.M3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.debug</artifactId>
-			<version>0.9.0-SNAPSHOT</version>
+			<version>0.9.0.M3</version>
 			<classifier>sources</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.generator</artifactId>
-			<version>0.9.0-SNAPSHOT</version>
+			<version>0.9.0.M3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.generator</artifactId>
-			<version>0.9.0-SNAPSHOT</version>
+			<version>0.9.0.M3</version>
 			<classifier>sources</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.jsonrpc</artifactId>
-			<version>0.9.0-SNAPSHOT</version>
+			<version>0.9.0.M3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.jsonrpc</artifactId>
-			<version>0.9.0-SNAPSHOT</version>
+			<version>0.9.0.M3</version>
 			<classifier>sources</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.jsonrpc.debug</artifactId>
-			<version>0.9.0-SNAPSHOT</version>
+			<version>0.9.0.M3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.jsonrpc.debug</artifactId>
-			<version>0.9.0-SNAPSHOT</version>
+			<version>0.9.0.M3</version>
 			<classifier>sources</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.websocket</artifactId>
-			<version>0.9.0-SNAPSHOT</version>
+			<version>0.9.0.M3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.websocket</artifactId>
-			<version>0.9.0-SNAPSHOT</version>
+			<version>0.9.0.M3</version>
 			<classifier>sources</classifier>
 		</dependency>
 	</dependencies>
@@ -125,7 +125,7 @@
 						<artifact>
 							<groupId>org.eclipse.lsp4j</groupId>
 							<artifactId>lsp4j.target</artifactId>
-							<version>0.9.0-SNAPSHOT</version>
+							<version>0.9.0.M3</version>
 						</artifact>
 					</target>
 					<environments>
