--- a/releng/lsp4j-feature/pom.xml
+++ b/releng/lsp4j-feature/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.eclipse.lsp4j</groupId>
 		<artifactId>lsp4j.releng</artifactId>
-		<version>0.9.0.M3</version>
+		<version>0.9.0-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 </project>
