--- a/releng/p2/pom.xml
+++ b/releng/p2/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>org.eclipse.lsp4j</groupId>
 		<artifactId>lsp4j.releng</artifactId>
-		<version>0.9.0.M3</version>
+		<version>0.9.0-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -48,8 +48,8 @@
 									<fileset dir="${basedir}/target/repository/" />
 								</copy>
 								<copy
-									file="${basedir}/target/lsp4j.p2-repository-0.9.0.M3.zip"
-									tofile="${root-dir}/build/p2-repository/../lsp4j.p2-repository-0.9.0.M3.zip">
+									file="${basedir}/target/lsp4j.p2-repository-0.9.0-SNAPSHOT.zip"
+									tofile="${root-dir}/build/p2-repository/../lsp4j.p2-repository-0.9.0-SNAPSHOT.zip">
 								</copy>
 							</tasks>
 						</configuration>
