--- a/releng/pom.xml
+++ b/releng/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.eclipse.lsp4j</groupId>
 	<artifactId>lsp4j.releng</artifactId>
-	<version>0.9.0.M3</version>
+	<version>0.9.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<properties>
@@ -125,7 +125,7 @@
 						<artifact>
 							<groupId>org.eclipse.lsp4j</groupId>
 							<artifactId>lsp4j.target</artifactId>
-							<version>0.9.0.M3</version>
+							<version>0.9.0-SNAPSHOT</version>
 						</artifact>
 					</target>
 					<environments>
