--- a/releng/pom.xml
+++ b/releng/pom.xml
@@ -36,67 +36,67 @@
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j</artifactId>
-			<version>0.10.0-SNAPSHOT</version>
+			<version>0.10.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j</artifactId>
-			<version>0.10.0-SNAPSHOT</version>
+			<version>0.10.0</version>
 			<classifier>sources</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.debug</artifactId>
-			<version>0.10.0-SNAPSHOT</version>
+			<version>0.10.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.debug</artifactId>
-			<version>0.10.0-SNAPSHOT</version>
+			<version>0.10.0</version>
 			<classifier>sources</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.generator</artifactId>
-			<version>0.10.0-SNAPSHOT</version>
+			<version>0.10.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.generator</artifactId>
-			<version>0.10.0-SNAPSHOT</version>
+			<version>0.10.0</version>
 			<classifier>sources</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.jsonrpc</artifactId>
-			<version>0.10.0-SNAPSHOT</version>
+			<version>0.10.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.jsonrpc</artifactId>
-			<version>0.10.0-SNAPSHOT</version>
+			<version>0.10.0</version>
 			<classifier>sources</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.jsonrpc.debug</artifactId>
-			<version>0.10.0-SNAPSHOT</version>
+			<version>0.10.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.jsonrpc.debug</artifactId>
-			<version>0.10.0-SNAPSHOT</version>
+			<version>0.10.0</version>
 			<classifier>sources</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.websocket</artifactId>
-			<version>0.10.0-SNAPSHOT</version>
+			<version>0.10.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.websocket</artifactId>
-			<version>0.10.0-SNAPSHOT</version>
+			<version>0.10.0</version>
 			<classifier>sources</classifier>
 		</dependency>
 	</dependencies>
