Provide support for Jakarta Websocket #471
- will require an update of lsp4j.target.target file when orbit bundle
will be available, see
https://git.eclipse.org/r/c/orbit/orbit-recipes/+/174146
- to avoid API break, created a second bundle with the Jakarta
Websocket. it will allow also to support old version too for a moment.
the drawback is that it is making the naming a bit more complicated.

Signed-off-by: Aurélien Pupier <apupier@redhat.com>

--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -19,5 +19,6 @@ ext.versions = [
 	'gson': '2.8.6',
 	'gson_orbit': '2.8.6.v20201231-1626',
 	'websocket': '1.0',
+	'websocket_jakarta': '2.0.0',
 	'junit': '4.12'
 ]
