--- a/releng/pom.xml
+++ b/releng/pom.xml
@@ -95,7 +95,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
-			<artifactId>org.eclipse.lsp4j.websocket</artifactId>
+			<artifactId>org.eclipse.lsp4j.websocket.jakarta</artifactId>
 			<version>0.11.0-SNAPSHOT</version>
 			<classifier>sources</classifier>
 		</dependency>
