--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ import java.time.format.DateTimeFormatter
 import java.time.LocalDateTime
 
 buildscript {
-	repositories.jcenter()
+	repositories.mavenCentral()
 	dependencies {
 		classpath 'org.xtext:xtext-gradle-plugin:2.0.7'
 	}
@@ -25,7 +25,7 @@ ext.buildTime = DateTimeFormatter.ofPattern('yyyyMMdd-HHmm').format(LocalDateTim
 apply from: "${rootDir}/gradle/versions.gradle"
 
 subprojects {
-	repositories.jcenter()
+	repositories.mavenCentral()
 	
 	group = 'org.eclipse.lsp4j'
 	version = rootProject.version
