Bug #199: Commit updated generated versions of .project
Changes in Gradle have changed the order or XML file contents for
.project. This change udpates to the current output
of "./gradlew eclipse assemble" the command listed in Contributing.md

--- a/org.eclipse.lsp4j.websocket.jakarta/.project
+++ b/org.eclipse.lsp4j.websocket.jakarta/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>org.eclipse.lsp4j.websocket.jakarta</name>
-	<comment>WebSocket support for LSP4J</comment>
+	<comment>Jakarta WebSocket support for LSP4J</comment>
 	<projects/>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
