--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -16,7 +16,7 @@ ext.versions = [
 	'xtend_lib': '2.24.0',
 	'guava': '[14.0,31)',
 	'guava_orbit': '30.1.0.v20210127-2300',
-	'gson': '2.8.6',
+	'gson': '[2.8.6,2.9)',
 	'gson_orbit': '2.8.6.v20201231-1626',
 	'websocket_jakarta': '2.0.0',
 	'junit': '4.12'
