--- a/org.eclipse.lsp4j.websocket/build.gradle
+++ b/org.eclipse.lsp4j.websocket/build.gradle
@@ -1,5 +1,5 @@
 /******************************************************************************
- * Copyright (c) 2016-2017 TypeFox and others.
+ * Copyright (c) 2019 TypeFox and others.
  * 
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -10,11 +10,15 @@
  * SPDX-License-Identifier: EPL-2.0 OR BSD-3-Clause
  ******************************************************************************/
 
-rootProject.name = 'lsp4j'
-include 'org.eclipse.lsp4j'
-include 'org.eclipse.lsp4j.debug'
-include 'org.eclipse.lsp4j.generator'
-include 'org.eclipse.lsp4j.jsonrpc'
-include 'org.eclipse.lsp4j.jsonrpc.debug'
-include 'org.eclipse.lsp4j.websocket.jakarta'
-include 'org.eclipse.lsp4j.websocket'
+ext.title = 'LSP4J WebSocket'
+description = 'WebSocket support for LSP4J'
+
+dependencies {
+	compile project(":org.eclipse.lsp4j.jsonrpc")
+	compile "javax.websocket:javax.websocket-api:${versions.websocket}"
+	testCompile "junit:junit:$versions.junit"
+}
+
+jar.manifest {
+	instruction 'Import-Package', '*'
+}
