--- a/releng/pom.xml
+++ b/releng/pom.xml
@@ -98,6 +98,17 @@
 			<version>0.12.0-SNAPSHOT</version>
 			<classifier>sources</classifier>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.lsp4j</groupId>
+			<artifactId>org.eclipse.lsp4j.websocket</artifactId>
+			<version>0.12.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.lsp4j</groupId>
+			<artifactId>org.eclipse.lsp4j.websocket</artifactId>
+			<version>0.12.0-SNAPSHOT</version>
+			<classifier>sources</classifier>
+		</dependency>
 	</dependencies>
 
 	<modules>
