--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -10,7 +10,7 @@
  * SPDX-License-Identifier: EPL-2.0 OR BSD-3-Clause
  ******************************************************************************/
 
-version = '0.17.0'
+version = '0.18.0-SNAPSHOT'
 
 ext.versions = [
 	'xtend_lib': '2.28.0',
