add and use copy of ToStringBuilder from xbase.lib
Signed-off-by: Christian Dietrich <christian.dietrich@itemis.de>

--- a/org.eclipse.lsp4j/build.gradle
+++ b/org.eclipse.lsp4j/build.gradle
@@ -28,5 +28,5 @@ jar {
 }
 
 jar.bnd (
-	'Import-Package': "com.google.common.*;version=\"$versions.guava\",com.google.gson.*;version=\"$versions.gson\",*"
+	'Import-Package': "com.google.gson.*;version=\"$versions.gson\",*"
 )
