added archunit tests for no xbase/xtend/guava dep
Signed-off-by: Christian Dietrich <christian.dietrich@itemis.de>

--- a/org.eclipse.lsp4j.debug/build.gradle
+++ b/org.eclipse.lsp4j.debug/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 	testImplementation "junit:junit:$versions.junit"
 	testImplementation "org.eclipse.xtend:org.eclipse.xtend.lib:$versions.xtend_lib"
 	testImplementation project(":org.eclipse.lsp4j.generator")
+	testImplementation "com.tngtech.archunit:archunit:$versions.archunit"
 }
 
 jar {
