[#702] dont import package from self
Signed-off-by: Christian Dietrich <christian.dietrich@itemis.de>

--- a/org.eclipse.lsp4j.jsonrpc.debug/build.gradle
+++ b/org.eclipse.lsp4j.jsonrpc.debug/build.gradle
@@ -20,6 +20,6 @@ dependencies {
 }
 
 jar.bnd(
-	'Import-Package': "com.google.gson.*;version=\"$versions.gson\",*"
+	'Import-Package': "com.google.gson.*;version=\"$versions.gson\",!org.eclipse.lsp4j.jsonrpc.debug*,*"
 )
 
