--- a/org.eclipse.lsp4j.debug/build.gradle
+++ b/org.eclipse.lsp4j.debug/build.gradle
@@ -27,5 +27,5 @@ jar {
 }
 
 jar.bnd (
-	'Import-Package': "com.google.gson.*;version=\"$versions.gson\",*",
+	'Import-Package': "com.google.gson.*;version=\"$versions.gson\",!org.eclipse.lsp4j.debug*,org.eclipse.lsp4j.jsonrpc.debug*,*",
 )
