--- a/org.eclipse.lsp4j.jsonrpc/build.gradle
+++ b/org.eclipse.lsp4j.jsonrpc/build.gradle
@@ -19,5 +19,5 @@ dependencies {
 }
 
 jar.bnd(
-	'Import-Package': "com.google.gson.*;version=\"$versions.gson\",*"
+	'Import-Package': "com.google.gson.*;version=\"$versions.gson\",!org.eclipse.lsp4j.jsonrpc*,*"
 )
