update to gradle 8.0.2 and xtext-gradle-plugin 4.0.0 fixes #708
Signed-off-by: Christian Dietrich <christian.dietrich@itemis.de>

--- a/gradle/java-compiler-settings.gradle
+++ b/gradle/java-compiler-settings.gradle
@@ -24,14 +24,14 @@ tasks.withType(JavaCompile) {
 task sourcesJar(type: Jar, dependsOn: classes) {
 	group 'Build'
 	description 'Assembles a jar archive containing the sources.'
-	classifier = 'sources'
+	archiveClassifier = 'sources'
 	from sourceSets.main.allSource
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
 	group 'Build'
 	description 'Assembles a jar archive containing the JavaDoc output.'
-	classifier = 'javadoc'
+	archiveClassifier = 'javadoc'
 	from javadoc.destinationDir
 }
 
