--- a/releng/pom.xml
+++ b/releng/pom.xml
@@ -8,8 +8,8 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<tycho-version>1.7.0</tycho-version>
-		<root-dir>${basedir}/..</root-dir>
+		<tycho-version>2.7.5</tycho-version>
+		<root-dir>${maven.multiModuleProjectDirectory}/..</root-dir>
 	</properties>
 
 	<pluginRepositories>
