Avoid use of absolute path where BND can't handle it
BND when calculating the full path to savemanifest runs within the current
dir being the root of the project. Making this change ($buildDir -> build)
does not change the output but does make it work on Windows.

Fixes #734

--- a/gradle/manifest-gen.gradle
+++ b/gradle/manifest-gen.gradle
@@ -23,7 +23,7 @@ jar.bnd (
 	'Bundle-Vendor': 'Eclipse LSP4J',
 	'Bundle-RequiredExecutionEnvironment': 'JavaSE-11',
 	"-exportcontents": "org.eclipse.lsp4j.*",
-	"-savemanifest": "$buildDir/tmp/bnd/MANIFEST.MF",
+	"-savemanifest": "build/tmp/bnd/MANIFEST.MF",
 )
 
 //------------------------------------------------------
