--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -13,8 +13,8 @@
 version = '0.22.0-SNAPSHOT'
 
 ext.versions = [
-	'xtend_lib': '2.28.0',
-	'guava': '[30.1,31)',
+	'xtend_lib': '2.32.0.M2',
+	'guava': '[32.1.1,33)',
 	'gson': '[2.9.1,2.11)',
 	'websocket_jakarta': '2.0.0',
 	'websocket': '1.0',
