--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -13,7 +13,7 @@
 version = '0.22.0-SNAPSHOT'
 
 ext.versions = [
-	'xtend_lib': '2.32.0.M2',
+	'xtend_lib': '2.32.0',
 	'guava': '[32.1.2,33)',
 	'gson': '[2.9.1,2.11)',
 	'websocket_jakarta': '2.0.0',
