naive attempt to fix #776
Signed-off-by: Christian Dietrich <christian.dietrich.opensource@gmail.com>

fix some gradle deprecations

Signed-off-by: Christian Dietrich <christian.dietrich.opensource@gmail.com>

update to gradle 8.5

Signed-off-by: Christian Dietrich <christian.dietrich.opensource@gmail.com>

downgrade bnd plugin again

Signed-off-by: Christian Dietrich <christian.dietrich.opensource@gmail.com>

--- a/gradle/java-compiler-settings.gradle
+++ b/gradle/java-compiler-settings.gradle
@@ -10,7 +10,9 @@
  * SPDX-License-Identifier: EPL-2.0 OR BSD-3-Clause
  ******************************************************************************/
 
-sourceCompatibility = '11'
+java {
+	sourceCompatibility = JavaVersion.VERSION_11
+}
 
 tasks.withType(Javadoc) {
 	options.addStringOption('Xdoclint:none', '-quiet')
