--- a/org.eclipse.lsp4j.generator/build.gradle
+++ b/org.eclipse.lsp4j.generator/build.gradle
@@ -18,6 +18,6 @@ dependencies {
 	api "org.eclipse.xtend:org.eclipse.xtend.lib:$versions.xtend_lib"
 }
 
-jar.bnd (
+jar.bundle.bnd (
 	'Import-Package': "com.google.common.*;version=\"$versions.guava\",com.google.gson.*;version=\"$versions.gson\",*"
 )
