--- a/org.eclipse.lsp4j.jsonrpc.debug/build.gradle
+++ b/org.eclipse.lsp4j.jsonrpc.debug/build.gradle
@@ -19,7 +19,7 @@ dependencies {
 	testImplementation "junit:junit:$versions.junit"
 }
 
-jar.bnd(
+jar.bundle.bnd(
 	'Import-Package': "com.google.gson.*;version=\"$versions.gson\",*"
 )
 
