--- a/gradle/manifest-gen.gradle
+++ b/gradle/manifest-gen.gradle
@@ -18,7 +18,7 @@ else if (baseVersion.split('\\.').length == 4)
 	baseVersion = baseVersion.substring(0, baseVersion.lastIndexOf('.'))
 def qualifiedVersion = baseVersion + '.v' + buildTime
 
-jar.bnd (
+jar.bundle.bnd (
 	'Bundle-Version': qualifiedVersion,
 	'Bundle-Vendor': 'Eclipse LSP4J',
 	'Bundle-RequiredExecutionEnvironment': 'JavaSE-11',
