--- a/org.eclipse.lsp4j.debug/build.gradle
+++ b/org.eclipse.lsp4j.debug/build.gradle
@@ -22,6 +22,6 @@ dependencies {
 	testImplementation "com.tngtech.archunit:archunit:$versions.archunit"
 }
 
-jar.bnd (
+jar.bundle.bnd (
 	'Import-Package': "com.google.gson.*;version=\"$versions.gson\",*",
 )
