--- a/org.eclipse.lsp4j.jsonrpc/build.gradle
+++ b/org.eclipse.lsp4j.jsonrpc/build.gradle
@@ -18,6 +18,6 @@ dependencies {
 	testImplementation "junit:junit:$versions.junit"
 }
 
-jar.bnd(
+jar.bundle.bnd(
 	'Import-Package': "com.google.gson.*;version=\"$versions.gson\",*"
 )
