Deprecate lsp4j.websocket in preparation for removal in the future.
The bundle has been annotated deprecated for removal in a future
version.

The bundle will not be part of the SDK feature, nor part of SimRel
going forward.

Part of #647

--- a/org.eclipse.lsp4j.websocket/build.gradle
+++ b/org.eclipse.lsp4j.websocket/build.gradle
@@ -11,7 +11,7 @@
  ******************************************************************************/
 
 ext.title = 'LSP4J WebSocket'
-description = 'WebSocket support for LSP4J'
+description = 'WebSocket support for LSP4J (deprecated, please migrate to org.eclipse.lsp4j.websocket.jakarta)'
 
 dependencies {
 	api project(":org.eclipse.lsp4j.jsonrpc")
