--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,11 +1,11 @@
-# https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions
+# https://docs.github.com/en/actions/reference/workflows-and-actions/workflow-syntax
 name: Validate
 
-on:
+on:  # https://docs.github.com/en/actions/reference/workflows-and-actions/events-that-trigger-workflows
   push:
     branches-ignore:  # build all branches except:
     - 'dependabot/**'  # prevent workflow being triggered twice (once for commit to the branch and once for opening/syncing the PR)
-    tags-ignore: # don't build tags
+    tags-ignore:  # don't build tags
     - '**'
     paths-ignore:
     - '**/*.md'
@@ -18,27 +18,42 @@ on:
     - '.editorconfig'
     - '.git*'
     - '.github/*.yml'
-  workflow_dispatch:  # https://github.blog/changelog/2020-07-06-github-actions-manual-triggers-with-workflow_dispatch/
+
+defaults:
+  run:
+    shell: bash
+
 
 jobs:
+
+  ###########################################################
   build:
-    runs-on: ${{ matrix.os }}
+  ###########################################################
 
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os:  # https://github.com/actions/runner-images#available-images
+        - ubuntu-latest
+        - macos-15-intel # Intel
+        - macos-latest # ARM
+        - windows-latest
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 20
 
     steps:
-    - name: Git Checkout
-      uses: actions/checkout@v4  # https://github.com/actions/checkout
 
-    - name: Set up JDK 11 ☕
-      uses: actions/setup-java@v4
+    - name: Git Checkout
+      uses: actions/checkout@v5  # https://github.com/actions/checkout
+
+
+    - name: "Install: JDK 11 ☕"
+      uses: actions/setup-java@v5  # https://github.com/actions/setup-java
       with:
+        distribution: temurin
         java-version: 11
-        distribution: 'temurin'
         cache: gradle
+
 
     - name: Build with Gradle 🏗️
       run: ./gradlew build
