build: use JDK 17 to run Gradle; compile/test with JDK 11
- Decouple JDK to run Gradle from the JDK used to compile/test.
- Use Java toolchains to select JDK 11 for compilation.
- Set javac --release 11 for consistent API/bytecode.
- Launch Test tasks with the JDK 11 toolchain.
- Keep sourceCompatibility for IDEs; omit targetCompatibility.

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -69,11 +69,19 @@ jobs:
       uses: actions/checkout@v5  # https://github.com/actions/checkout
 
 
-    - name: "Install: JDK 11 ☕"
+    - name: "Install: JDK 11 ☕ for compilation/tests"
       uses: actions/setup-java@v5  # https://github.com/actions/setup-java
       with:
         distribution: temurin
         java-version: 11
+        cache: gradle
+
+
+    - name: "Install: JDK 17 ☕ for running gradle"
+      uses: actions/setup-java@v5  # https://github.com/actions/setup-java
+      with:
+        distribution: temurin
+        java-version: 17
         cache: gradle
 
 
