--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -13,6 +13,8 @@
 version = '1.0.0-SNAPSHOT'
 
 ext.versions = [
+	'java': 11,
+
 	'xtend_lib': '2.32.0',
 	'guava': '[32.1.2,34)',
 	'gson': '[2.9.1,3.0)',
