build: use JDK 17 or 21 to run Gradle; compile/test with JDK 11, 17, and 21
- on CI build with Java 21, test with 11, 17 and 21
- on Dev machine, build can also be 17
- Decouple JDK to run Gradle from the JDK used to compile/test.
- Use Java toolchains to select JDK 11 for compilation and test
- Set javac --release 11 for consistent API/bytecode.
- Launch Test tasks with the JDK 11 toolchain for non-xtend cases
- Launch test tasks with JDK 17, 21 for all tests
- Update Tycho to newer version that works with Java 21

Co-authored-by: Jonah Graham <jonah@kichwacoders.com>

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -45,13 +45,15 @@ jobs:
       uses: actions/checkout@v5  # https://github.com/actions/checkout
 
 
-    - name: "Install: JDK 11 ☕"
+    - name: "Install: JDKs for building and testing"
       uses: actions/setup-java@v5  # https://github.com/actions/setup-java
       with:
         distribution: temurin
-        java-version: 11
+        java-version: |
+          11
+          17
+          21
         cache: gradle
 
-
     - name: Build with Gradle 🏗️
-      run: ./gradlew build
+      run: ./gradlew build testOlderJavas
