build: upgrade to Gradle 8.14.3, Bnd Gradle Plugins 7.1.0, Gradle JDK 21
- Use JDK 21 to run Gradle
- Fix all Gradle deprecation warnings, e.g. "Invocation of Task.project
at execution time has been deprecated."

--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,12 @@ buildscript {
 	repositories {
 		mavenCentral()
 		maven {
-			url "https://plugins.gradle.org/m2/"
+			url = "https://plugins.gradle.org/m2/"
 		}
 	}
 	dependencies {
-		classpath "biz.aQute.bnd:biz.aQute.bnd.gradle:6.4.0"
-		classpath "org.xtext:xtext-gradle-plugin:4.0.0"
+		classpath "biz.aQute.bnd:biz.aQute.bnd.gradle:7.1.0" // https://github.com/bndtools/bnd/releases
+		classpath "org.xtext:xtext-gradle-plugin:4.0.0" // https://github.com/xtext/xtext-gradle-plugin/releases
 	}
 }
 
@@ -175,7 +175,7 @@ subprojects {
 }
 
 task clean(type: Delete) {
-	group 'Build'
-	description 'Deletes the local repositories'
+	group = 'Build'
+	description = 'Deletes the local repositories'
 	delete 'build'
 }
