Add japicmp to GitHub actions build
The results are published, but can be seen in build summary.

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -57,3 +57,6 @@ jobs:
 
     - name: Build with Gradle 🏗️
       run: ./gradlew build testOlderJavas
+
+    - name: Run API Compare
+      run: ./releng/runjapicmp.sh
