--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -65,7 +65,7 @@ jobs:
         cache: gradle
 
     - name: Build with Gradle 🏗️
-      run: ./gradlew build testOlderJavas
+      run: ./gradlew build jmhCompileGeneratedClasses testOlderJavas
 
     - name: Upload Test Results
       if: always()
