Disable value of method parameter is unused warnings in Java
There are lots of these warnings and they can be ignored with this
setting, or `@param params` can be added to Javadoc block for each of them.

As this warning was recently introduced, and is not a common default,
I have elected to turn the warning off. To turn this warning on again,
ensure that all existing cases are resolved.

--- a/build.gradle
+++ b/build.gradle
@@ -171,7 +171,7 @@ subprojects {
 			properties['org.eclipse.jdt.core.compiler.problem.unusedLabel']='warning'
 			properties['org.eclipse.jdt.core.compiler.problem.unusedLocal']='warning'
 			properties['org.eclipse.jdt.core.compiler.problem.unusedObjectAllocation']='warning'
-			properties['org.eclipse.jdt.core.compiler.problem.unusedParameter']='warning'
+			properties['org.eclipse.jdt.core.compiler.problem.unusedParameter']='ignore'
 			properties['org.eclipse.jdt.core.compiler.problem.unusedParameterIncludeDocCommentReference']='enabled'
 			properties['org.eclipse.jdt.core.compiler.problem.unusedParameterWhenImplementingAbstract']='disabled'
 			properties['org.eclipse.jdt.core.compiler.problem.unusedParameterWhenOverridingConcrete']='disabled'
