Use maven instead of gradle as build technology
Fixes https://github.com/eclipse-lsp4j/lsp4j/issues/937#issuecomment-3627173600

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -74,8 +74,7 @@ jobs:
         name: Test Results ${{ matrix.os }}
         if-no-files-found: warn
         path: |
-          ${{ github.workspace }}/**/build/test-results/**/*.xml
-          ${{ github.workspace }}/**/build/reports/
+          ${{ github.workspace }}/**/target/surefire-reports**
 
 
     - name: Run API Compare
